fix: fix some layout issues

--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -11,14 +11,6 @@
   box-sizing: border-box;
   padding: 1em 5em 1em 3em;
   border: none;
-  --shadow-color: 0deg 0% 0%;
-  --shadow-elevation-low: 0.3px 0.4px 0.7px hsl(var(--shadow-color) / 0.03),
-    0.5px 0.7px 1.2px -0.3px hsl(var(--shadow-color) / 0.08),
-    1.1px 1.5px 2.6px -0.6px hsl(var(--shadow-color) / 0.12);
-  --shadow-elevation-medium: 0.3px 0.4px 0.7px hsl(var(--shadow-color) / 0.03),
-    1.3px 1.7px 3px -0.2px hsl(var(--shadow-color) / 0.07),
-    2.6px 3.6px 6.2px -0.4px hsl(var(--shadow-color) / 0.1),
-    5.6px 7.7px 13.4px -0.6px hsl(var(--shadow-color) / 0.14);
   box-shadow: var(--shadow-elevation-low);
   transition: box-shadow 0.2s;
 }
