--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -32,14 +32,15 @@ html {
   background-color: var(--surface);
   color: var(--on-surface);
   /* Тени */
-  --shadow-color: 0deg 0% 0%;
-  --shadow-elevation-low: 0.3px 0.4px 0.7px hsl(var(--shadow-color) / 0.03),
-    0.5px 0.7px 1.2px -0.3px hsl(var(--shadow-color) / 0.08),
-    1.1px 1.5px 2.6px -0.6px hsl(var(--shadow-color) / 0.12);
-  --shadow-elevation-medium: 0.3px 0.4px 0.7px hsl(var(--shadow-color) / 0.03),
-    1.3px 1.7px 3px -0.2px hsl(var(--shadow-color) / 0.07),
-    2.6px 3.6px 6.2px -0.4px hsl(var(--shadow-color) / 0.1),
-    5.6px 7.7px 13.4px -0.6px hsl(var(--shadow-color) / 0.14);
+  --shadow-color: 0deg 0% 62%;
+  --shadow-elevation-low: 0.8px 0.3px 1.3px hsl(var(--shadow-color) / 0),
+    2.6px 1.1px 4.2px hsl(var(--shadow-color) / 0.38);
+  --shadow-elevation-medium: 0.8px 0.3px 1.3px hsl(var(--shadow-color) / 0),
+    4.7px 2px 7.7px hsl(var(--shadow-color) / 0.23),
+    13.2px 5.7px 21.6px hsl(var(--shadow-color) / 0.47);
+  --shadow-elevation-high: 0.8px 0.3px 1.3px hsl(var(--shadow-color) / 0),
+    7.9px 3.4px 12.9px hsl(var(--shadow-color) / 0.11),
+    14.3px 6.2px 23.4px hsl(var(--shadow-color) / 0.22);
 }
 
 /* Фокус интерактивных элементов по умолчанию */
